samples/_failures_safe/1761202293_bb7efe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9db16943.c: In function ‘main’:
./samples/SAFE/__tmp_9db16943.c:181:9: error: expected declaration or statement at end of input
  181 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9db16943.c:181:9: error: expected declaration or statement at end of input
